[package]
name = "dyn-stack"
version = "0.6.0"
edition = "2021"
authors = ["sarah <>"]
description = "Dynamic stack wrapper for unsized allocations"
readme = "README.md"
repository = "https://github.com/kitegi/dynstack/"
license = "MIT"
keywords = ["stack", "allocation", "unsized", "array", "slice"]

[dependencies]
reborrow = "0.3"

[features]
default = ["std"]
nightly = []
std = []

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "dynstack"
harness = false
